--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.3",
+    "chart.js": "^2.9.3",
+    "google-maps-react": "^2.0.2",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.11.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-toastify": "^5.4.0",
     "react-use": "^13.6.3",
     "rebound": "^0.1.0",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-saga": "^1.1.1",
     "redux-starter-kit": "^1.0.1",
     "typescript": "^3.7.2",
